--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,5 +31,7 @@ jobs:
       - name: Create changelog
         id: changesets
         uses: changesets/action@v1
+        with:
+          createGithubReleases: false
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
