--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,7 +9,8 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
-      
+    permissions: read-all
+    
     steps:
       - uses: actions/checkout@v3
 
