--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install Dependencies
         run: yarn
 
+      - name: Install Dependencies
+        run: echo 'ddd'
+
       - name: Create Release Pull Request
         uses: changesets/action@v1
         env:
