--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,31 +1,36 @@
-name: Release
-
+name: Unit Tests
 on:
   push:
-    branches:
-      - main
-
+    branches: [main]
 
 jobs:
-  release:
-    name: Release
+  test:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
+    permissions: write-all
+      
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Setup Node.js 16
-        uses: actions/setup-node@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 'latest'
+
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
+          registry-url: https://npm.pkg.github.com
+          scope: '@toeverything'
+          cache: 'pnpm'
 
-      - name: Install Dependencies
-        run: yarn
+      
+      - name: create
+        run: pnpm install --no-frozen-lockfile
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_GITHUB_AUTH_TOKEN }}
 
-      - name: Install Dependencies
-        run: echo 'ddd'
-
-      - name: Create Release Pull Request
+      - name: Create changelog
+        id: changesets
         uses: changesets/action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
